# calendar_outlook

./: .gitignore  README.md  config_example.json  pyproject.toml
certs/: generate.ps1
keys/: test_key
src/: client_app.py  client_conf.py  jwt_encode.py  test.py
tokens/: info
