[tool.poetry]
name = "outlook-calendar"
version = "0.0.1"
description = "Выкачка событий из календаря"
authors = ["Ilia Novikov WorkB <nov.ilucha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
o365 = "^2.0.35"
pyjwt = "^2.8.0"
cryptography = "^42.0.8"
pydantic-settings = "^2.3.4"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
